--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
